# CppDummyAPI

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  vcpkg.json
src/: main.cpp
